# svg-badge-customizer_rust

./: Cargo.toml  LICENSE  README.md
src/: main.rs
static/: index.html
